[gd_scene load_steps=11 format=3 uid="uid://d1hufr2rfm6xu"]

[ext_resource type="Script" uid="uid://btu6hdnyvvve" path="res://Scenes/Scripts/select_decks.gd" id="1_7rjtd"]
[ext_resource type="Texture2D" uid="uid://c57g273sfkrsv" path="res://Assets/Cards.svg" id="1_d865h"]
[ext_resource type="Theme" uid="uid://vdp0ma3noevw" path="res://Themes/HomeBtn.tres" id="2_esclw"]
[ext_resource type="PackedScene" uid="uid://buf31y3lahf5b" path="res://Scenes/Components/Input.tscn" id="3_ka3bw"]
[ext_resource type="Theme" uid="uid://bpg62mkgrlu4" path="res://Themes/MainTheme.tres" id="4_6m566"]
[ext_resource type="Texture2D" uid="uid://ce6y8an4ut4t4" path="res://Assets/Arrow.svg" id="7_0khw7"]
[ext_resource type="PackedScene" uid="uid://dy4gf7t6n5uc0" path="res://Scenes/Components/DeckList.tscn" id="7_njx0f"]
[ext_resource type="Script" uid="uid://dh0f33w3pwks2" path="res://Scenes/Scripts/add_word_btn_panel.gd" id="8_fr0d7"]
[ext_resource type="Script" uid="uid://chulsm87pjpjj" path="res://Scenes/Scripts/select_deck_btn.gd" id="10_6v1ac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj086"]
bg_color = Color(0.278431, 0.741176, 0.658824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ListDecks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7rjtd")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="IconSVG" type="TextureRect" parent="VBoxContainer/Control"]
modulate = Color(0.278431, 0.741176, 0.658824, 1)
layout_mode = 1
offset_right = 124.0
offset_bottom = 60.0
texture = ExtResource("1_d865h")
expand_mode = 2
stretch_mode = 4

[node name="PageName" type="RichTextLabel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[left][color=47BDA8][font_size=64] Jogar"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 200)
layout_mode = 2
theme = ExtResource("2_esclw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=47BDA8][font_size=48] Escolha uma Categoria"
fit_content = true

[node name="Input" parent="VBoxContainer/Panel/VBoxContainer" node_paths=PackedStringArray("filter_target") instance=ExtResource("3_ka3bw")]
layout_mode = 2
placeholder = "Pesquisar Categoria"
filter_target = NodePath("../../../DeckListPanel/DeckList")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="DeckListPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 700)
layout_mode = 2
theme = ExtResource("2_esclw")

[node name="DeckList" parent="VBoxContainer/DeckListPanel" instance=ExtResource("7_njx0f")]
layout_mode = 1
listAllWordsOption = true

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Confirm" type="Panel" parent="VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(256, 56)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wj086")
script = ExtResource("8_fr0d7")

[node name="SelectDeckBtn" type="Button" parent="VBoxContainer/VBoxContainer2/Confirm"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_6m566")
theme_override_font_sizes/font_size = 24
text = "Confirmar"
icon = ExtResource("7_0khw7")
icon_alignment = 2
expand_icon = true
script = ExtResource("10_6v1ac")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Confirm/SelectDeckBtn" to="VBoxContainer/VBoxContainer2/Confirm/SelectDeckBtn" method="_on_pressed"]
